--- a/blog-web/Gemfile
+++ b/blog-web/Gemfile
@@ -1,6 +1,8 @@
 source 'https://rubygems.org'
 
+gem 'will_paginate-bootstrap'
 
+gem 'will_paginate', '~> 3.1.0'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.6'
 # Use sqlite3 as the database for Active Record
